HeaderLogo no longer displays on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,17 @@
+/*Special Mobile Rules*/
+@media (max-width: 820px) {
+    .LandingLogo {
+        width: 30%;
+        max-width:180px;
+        height:auto;
+    }
+    .HeaderLogo {
+        display: none;
+    }
+}
+
+/*General*/
+
 .Landing {
     width: 100%;
     max-width: 1190px;
@@ -54,7 +68,14 @@
     margin-right: -100px;
 }
 
-.Logo {
+.HeaderLogo {
+    width: auto;
+    height:63px;
+    margin:0;
+    padding:0;
+}
+
+.LandingLogo {
     width: 30%;
     max-width:180px;
     height:auto;
@@ -63,12 +84,4 @@
 
 .Spacer {
     padding: inherit 5px;
-}
-
-@media (max-width: 700px) {
-    .Logo {
-        width: 30%;
-        max-width:180px;
-        height:auto;
-    }
 }
